fixes from testing
